@@ -16,14 +16,10 @@
  */
 package org.apache.solr.util;
 
-import java.util.TimeZone;
 import java.util.Set;
-import java.util.HashSet;
-import java.util.Collections;
-import java.util.Arrays;
-
-import java.util.regex.Pattern;
+import java.util.TimeZone;
 import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import org.apache.solr.common.SolrException;
 
@@ -44,8 +40,7 @@ public final class TimeZoneUtils {
    * @see TimeZone#getAvailableIDs
    */
   public static final Set<String> KNOWN_TIMEZONE_IDS 
-    = Collections.unmodifiableSet(new HashSet<>
-                                  (Arrays.asList(TimeZone.getAvailableIDs())));
+    = Set.of(TimeZone.getAvailableIDs());
 
   /**
    * This method is provided as a replacement for TimeZone.getTimeZone but 
